Add descriptions for categories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="goal_date">Goal date</string>
     <string name="days">days</string>
     <string name="day">day</string>
+    <string name="category_description">Category description</string>
 </resources>
