--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="day">day</string>
     <string name="category_description">Category description</string>
     <string name="max_balance">Max balance</string>
+    <string name="hidden_balance">Hidden balance</string>
 </resources>
